Fix text jumping on main nav

--- a/lbitest/stylesheets/style.scss
+++ b/lbitest/stylesheets/style.scss
@@ -226,7 +226,6 @@ img{ border: 0 !important; }
               border-bottom: 4px solid $melon;
               color: white;
               text-decoration: none; 
-              font-weight: 900 !important; 
             }
           }
         }
